welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: ')' expected but ';' found.
    if(x == Color.green;!estFaceMur){
                       ^SlugTracking:7: error: ';' expected but ')' found.
    if(x == Color.green;!estFaceMur){
                                   ^